--- a/app/lcia-comparison/lcia-comparison.html
+++ b/app/lcia-comparison/lcia-comparison.html
@@ -28,6 +28,11 @@
             <input type="number" step="any" class="form-control input-sm" id="activity-level"
                    ng-model="selection.activityLevel">
         </div>
+        <div class="form-group">
+            <label for="chart-label">Chart Label</label>
+            <input type="text" maxlength={{maxLabelLen}} class="form-control input-sm" id="chart-label"
+                   ng-model="selection.chartLabel">
+        </div>
         <button type="submit" class="btn btn-default" ng-click="selection.add()" aria-label="Add"
                 title="Display LCIA results">
             Add
