--- a/app/lcia-comparison/lcia-comparison.html
+++ b/app/lcia-comparison/lcia-comparison.html
@@ -39,23 +39,23 @@
         </button>
     </form>
 </div>
-<div class="panel panel-default">
+<div class="pad-bottom">
     <div id="selection-grid" ng-grid="gridOpts" class="gridStyle"></div>
 </div>
-<div class="row">
+<div ng-show="gridData.length" class="row">
     <div ng-repeat="method in lciaMethods" class="col-md-4">
         <div class="panel panel-default">
-            <div class="panel-heading" ng-style="{'background-color' : method.getDefaultColor()}">
+            <!--<div class="panel-heading" ng-style="{'background-color' : method.getDefaultColor()}">-->
+
                 <button type="button" class="close" ng-click="removeMethod(method)" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
+            <div class="panel-body">
                 <a ui-sref="home.lcia-method({lciaMethodID: method.lciaMethodID})">
                     {{method.getShortName()}}
                 </a>
-
-                <p>{{method.referenceFlowProperty.name}}</p>
-            </div>
-            <div class="panel-body">
+                <p><small>{{method.referenceFlowProperty.name}}</small></p>
+            <!--</div>-->
                 <svg class="plot-container">
                     <plot config="plot.config[method.lciaMethodID]" data="plot.data[method.lciaMethodID]"></plot>
                 </svg>
