--- a/app/fragment-lcia/fragment-lcia.html
+++ b/app/fragment-lcia/fragment-lcia.html
@@ -42,7 +42,7 @@
         </div>
         <div class="col-md-6">
             <div class="pull-right">
-                <button type="button" class="btn btn-link "
+                <button ng-show="parentStateIsSankey" type="button" class="btn btn-link "
                         ui-sref="^">
                     Show Sankey Diagram
                 </button>
