LCIA Comparison: use ui-sref, add access key (#8)

--- a/app/lcia-comparison/lcia-comparison.html
+++ b/app/lcia-comparison/lcia-comparison.html
@@ -38,7 +38,7 @@
                        ng-model="selection.chartLabel">
             </div>
             <button type="submit" class="btn btn-default btn-sm" ng-click="selection.add()" aria-label="Add"
-                    title="Display LCIA results">
+                    title="Display LCIA results" accesskey="a">
                 Add
             </button>
         </form>
