--- a/app/scenario/scenario-detail.html
+++ b/app/scenario/scenario-detail.html
@@ -21,7 +21,7 @@
             <dt>Reference Unit</dt>
             <dd>{{unit}}</dd>
             <dt>Description</dt>
-            <dd><pre class="scenario-description">{{scenario.description}}</pre></dd>
+            <dd><div class="scenario-description">{{scenario.description}}</div></dd>
         </dl>
     </div>
 </div>
