--- a/app/fragment-sankey/fragment-sankey.html
+++ b/app/fragment-sankey/fragment-sankey.html
@@ -2,8 +2,9 @@
 <div class="row">
     <p class="desc">{{infoMsg.fragmentSankey.msg}}</p>
     <div class="col-md-8">
-    <info>{{infoMsg.fragmentSankey.msg1}}</info>
-    <info>{{infoMsg.fragmentSankey.msg2}}</info>
+    <info>{{infoMsg.fragmentSankey.msg1}}<p></p>
+          {{infoMsg.fragmentSankey.msg2}}
+    </info>
         <dl class="dl-horizontal">
             <dt>Scenario</dt>
             <dd>
