Info: fix font size (#20)

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -4,7 +4,7 @@
     <p></p>
     <p>{{infoMsg.home.msg1}}</p>
     <p>{{infoMsg.home.msg2}}</p>
-    <p>{{infoMsg.home.msg3}}</p>
+       {{infoMsg.home.msg3}}
 </info>
 <div class="panel panel-default">
     <div class="panel-heading">
