--- a/app/lcia-comparison/lcia-comparison.html
+++ b/app/lcia-comparison/lcia-comparison.html
@@ -1,11 +1,12 @@
 <!-- HTML template for LCIA comparison view-->
+<div>
+<button class="btn btn-default btn-small pull-right" ng-csv="csv.getData()" csv-header="csvHeader"
+filename="{{csvFileName}}" lazy-load="true" ng-disabled="!gridData.length || !lciaMethods.length">
+Export to CSV
+</button>
+<div class="clearfix"></div>
+</div>
 <div class="panel panel-default" id="lcia-selection">
-    <div class="panel-heading">
-        <button class="btn btn-default btn-small" ng-csv="csv.getData()" csv-header="csv.header"
-                filename="{{csv.fileName}}" lazy-load="true" ng-disabled="true">
-            Export to CSV
-        </button>
-    </div>
     <div class="panel-body">
         <div class="panel panel-default">
             <div id="selection-grid" ng-grid="gridOpts" class="gridStyle"></div>
@@ -44,14 +45,13 @@
                 <input type="text" maxlength={{maxLabelLen}} class="form-control input-sm" id="chart-label"
                        ng-model="selection.chartLabel">
             </div>
-            <button type="submit" class="btn btn-default btn-sm" ng-click="selection.add()" aria-label="Add"
+            <button type="submit" class="btn btn-primary btn-sm" ng-click="selection.add()" aria-label="Add"
                     title="Display LCIA results" accesskey="a">
                 Add
             </button>
         </form>
     </div>
 </div>
-
 <div ng-show="gridData.length" class="row">
     <div ng-repeat="method in lciaMethods" class="col-md-4">
         <div class="panel panel-default">
