--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,8 @@
 
     <!--Use CDN when network connection is more reliable -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
     <!--<script src="bower_components/jquery/dist/jquery.min.js"></script>-->
     <!--<script src="bower_components/angular/angular.min.js"></script>-->
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
